[package]
name = "gh-trophy"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
keywords = ["GitHub", "OpenSCAD"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"