[package]
name = "gh-trophy"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
keywords = ["GitHub", "OpenSCAD"]
homepage = "https://github.com/pfcoperez/gh-trophy"
description = "CLI tool and associated libraries to fetch GH users activity and generate 3D models from this data"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed="8.9.0"